--- a/src/index.css
+++ b/src/index.css
@@ -28,14 +28,14 @@ body {
 }
 
 .blurdClass {
-    width:100%;
-    height:100%;
-    background-size:cover;
-    -webkit-filter: blur(4px);
-    -moz-filter: blur(4px);
-    -ms-filter: blur(4px);
-    -o-filter: blur(4px);
-    filter: blur(4px);
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  -webkit-filter: blur(4px);
+  -moz-filter: blur(4px);
+  -ms-filter: blur(4px);
+  -o-filter: blur(4px);
+  filter: blur(4px);
 }
 
 
@@ -182,6 +182,8 @@ footer h3 {
   transition-duration: 0.8s;
   transition-property: transform;
   z-index: 3;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
 
 }
 
@@ -192,15 +194,18 @@ footer h3 {
 
 .globeText {
   padding-bottom: 30px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
 
 }
 
 .blue {
-  color: rgb(69, 139, 159)
+  color: rgb(69, 139, 159);
 }
 
 .yellow {
-  color: rgb(230, 228, 218)
+  color: rgb(230, 228, 218);
+
 }
 
 /* https://css-tricks.com/perfect-full-page-background-image */
